--- a/src/文档/如何判断一个机场使用的线路类型.md
+++ b/src/文档/如何判断一个机场使用的线路类型.md
@@ -1,7 +1,7 @@
 ---
 title: 如何判断一个机场使用的线路类型（如IPLC/IEPL专线、CN2、BGP中转等）
 createTime: 2025/01/29 07:00:17
-permalink: /文档/r50bpg9j/
+permalink: /doc/r50bpg9j/
 tags:
   - 科学上网
   - VPN
