--- a/src/机场推荐/机场推荐大哥云.md
+++ b/src/机场推荐/机场推荐大哥云.md
@@ -1,7 +1,7 @@
 ---
 title: ✈️机场推荐【大哥云】 - 高性价比、老牌机场
 createTime: 2025/01/25 09:28:08
-permalink: /机场推荐/994p0u8j/
+permalink: /vpnrecs/994p0u8j/
 tags:
   - 科学上网
   - VPN
@@ -37,6 +37,6 @@ tags:
 
 ## 客户端使用方法
 
-- 📱 [clash for Android](https://www.pyjichang.com/文档/eh8f4n86/)
-- 🖥 [clash for Windows](https://www.pyjichang.com/文档/0gematwc/)
-- 🍎 [clash for iOS](https://www.pyjichang.com/文档/z747kgjd/)
+- 📱 [clash for Android](https://www.pyjichang.com/doc/eh8f4n86/)
+- 🖥 [clash for Windows](https://www.pyjichang.com/doc/0gematwc/)
+- 🍎 [clash for iOS](https://www.pyjichang.com/doc/z747kgjd/)
