--- a/src/机场推荐/机场推荐青云梯.md
+++ b/src/机场推荐/机场推荐青云梯.md
@@ -1,7 +1,7 @@
 ---
 title: ✈️机场推荐【青云梯】 - 高性价比、老牌机场
 createTime: 2025/01/31 09:29:07
-permalink: /机场推荐/mcridsxx/
+permalink: /vpnrecs/mcridsxx/
 tags:
   - 科学上网
   - VPN
