--- a/src/文档/免费机场.md
+++ b/src/文档/免费机场.md
@@ -1,7 +1,7 @@
 ---
 title: ⏰ 免费机场 免费梯子 翻墙VPN
 createTime: 2024/10/22 10:05:34
-permalink: /文档/oh8wwokl/
+permalink: /doc/oh8wwokl/
 tags:
   - 科学上网
   - VPN
@@ -46,9 +46,9 @@ tags:
 
 ## 📘 客户端使用方法
 
-- 📱 [Android](https://www.pyjichang.com/文档/eh8f4n86/)
-- 🖥 [Windows](https://www.pyjichang.com/文档/0gematwc/)
-- 🍎 [iOS](https://www.pyjichang.com/文档/z747kgjd/)
+- 📱 [Android](https://www.pyjichang.com/doc/eh8f4n86/)
+- 🖥 [Windows](https://www.pyjichang.com/doc/0gematwc/)
+- 🍎 [iOS](https://www.pyjichang.com/doc/z747kgjd/)
 
 ## 💸 付费订阅
 
