--- a/src/机场推荐/机场推荐龙猫云.md
+++ b/src/机场推荐/机场推荐龙猫云.md
@@ -1,7 +1,7 @@
 ---
 title: ✈️机场推荐【龙猫云】 - 全IPLC专线、老牌机场
 createTime: 2025/01/31 09:38:21
-permalink: /机场推荐/b6t9mwuv/
+permalink: /vpnrecs/b6t9mwuv/
 tags:
   - 科学上网
   - VPN
