--- a/src/doc/免费机场.md
+++ b/src/doc/免费机场.md
@@ -1,5 +1,5 @@
 ---
-title: ⏰ 免费机场 免费梯子 翻墙VPN
+title: ⏰永久免费机场订阅/白嫖节点-支持clash/v2ray/trojan/ssr
 createTime: 2024/10/22 10:05:34
 permalink: /doc/oh8wwokl/
 tags:
@@ -7,6 +7,8 @@ tags:
   - VPN
   - 机场
   - 免费
+  - 白嫖
+  - 订阅
   - clash
   - v2ray
   - trojan
@@ -15,7 +17,7 @@ tags:
 
 ---
 
-✈️ 免费机场 / 免费VPN -> 自动获取免 clash/v2ray/trojan/sr/ssr 订阅链接，间隔12小时持续更新 | 科学上网 | 翻墙
+✈️ 永久免费机场 / 白嫖免费VPN -> 自动获取免 clash/v2ray/trojan/sr/ssr 订阅链接，间隔12小时持续更新 | 科学上网 | 翻墙
 
 <!-- more -->
 
