--- a/src/doc/免费机场.md
+++ b/src/doc/免费机场.md
@@ -28,23 +28,9 @@ tags:
 
 ## 🚀 每12小时更新一次
 
-- clash订阅链接：`https://git.io/emzclash`
+- clash订阅链接`https://git.io/emzclash` <button type="button" onclick="navigator.clipboard.writeText('https://git.io/emzclash')">复制</button>
 
-- v2ray订阅链接：`https://git.io/emzv2ray`
-
-手机用户无法访问上方短链接时可以用下面的长链接
-
-- clash订阅链接：`https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml`
-
-- v2ray订阅链接：`https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt`
-
-## 📷 使用截图
-
-低峰期可以看视频，高峰期可能会有点卡顿。
-
-![alt text](images/免费机场/image.png)
-
-![alt text](images/免费机场/image-1.png)
+- v2ray订阅链接`https://git.io/emzv2ray` <button type="button" onclick="navigator.clipboard.writeText('https://git.io/emzv2ray')">复制</button>
 
 ## 📘 客户端使用方法
 
@@ -57,3 +43,11 @@ tags:
 我搜罗的一些比较便宜好用的机场，觉得免费订阅不好使的朋友们可以在这里面找找。
 
 [https://www.pyjichang.com/](https://www.pyjichang.com/)
+
+## 📷 使用截图
+
+低峰期可以看视频，高峰期可能会有点卡顿。
+
+![免费机场使用截图](images/免费机场/image.png)
+
+![免费机场使用截图](images/免费机场/image-1.png)
