修改加速啦

--- a/src/vpnrecs/机场推荐九霄云.md
+++ b/src/vpnrecs/机场推荐九霄云.md
@@ -16,11 +16,11 @@ tags:
 
 九霄云机场，6.8元/月，10GB流量，超实惠的轻量级机场，价格亲民。
 
-注册地址：[https://xn--sjqaa.xn--9pr628ffxd.xn--fiqs8s](https://xn--sjqaa.xn--9pr628ffxd.xn--fiqs8s/#/register?code=ZXzjv7oD)
+官网地址：[https://xn--sjqaa.xn--9pr628ffxd.xn--fiqs8s](https://xn--sjqaa.xn--9pr628ffxd.xn--fiqs8s/#/register?code=ZXzjv7oD)
 
 <!-- more -->
 
-## 九霄云注册地址
+## 九霄云官网地址
 
 [https://xn--sjqaa.xn--9pr628ffxd.xn--fiqs8s](https://xn--sjqaa.xn--9pr628ffxd.xn--fiqs8s/#/register?code=ZXzjv7oD)
 
