--- a/src/vpnrecs/机场推荐冲上云霄.md
+++ b/src/vpnrecs/机场推荐冲上云霄.md
@@ -20,7 +20,7 @@ tags:
 
 💡 **专属优惠码**：`ermaozi`，购买套餐后输入可额外获取 **20G** 流量。
 
-🔗 **注册地址**：[点击这里](https://cpdd.one/?r=32083)
+🔗 **官网地址**：[点击这里](https://cpdd.one/?r=32083)
 
 ---
 
