--- a/src/vpnrecs/机场推荐百变小樱.md
+++ b/src/vpnrecs/机场推荐百变小樱.md
@@ -11,7 +11,7 @@ permalink: /vpnrecs/jd2i293q/
 - 年度计划享88折优惠：`happy10-1-1year`
 - 三年套餐享78折优惠：`happy10-1-3years`
 
-点击访问注册地址：[https://bbxy88.com](https://bbxy.xn--cesw6hd3s99f.com/auth/register?code=WuuD)
+点击访问官网地址：[https://bbxy88.com](https://bbxy.xn--cesw6hd3s99f.com/auth/register?code=WuuD)
 
 <!-- more -->
 
