--- a/src/vpnrecs/机场推荐加速啦.md
+++ b/src/vpnrecs/机场推荐加速啦.md
@@ -12,9 +12,9 @@ tags:
   - 加速啦
 ---
 
-## 加速啦注册地址
+## 加速啦官网地址
 
-[https://www.jiasula.com](https://www.jiasula.com/auth/register?code=3J9z)
+[https://jiasu.la/](https://jiasu.la/?r=39116)
 
 ## 加速啦机场简介
 
