--- a/src/vpnrecs/机场推荐龙猫云.md
+++ b/src/vpnrecs/机场推荐龙猫云.md
@@ -12,7 +12,7 @@ tags:
   - 龙猫云
 ---
 
-## 龙猫云注册地址
+## 龙猫云官网地址
 
 [https://ermaozi01.lmvipaff03.cc/](https://ermaozi01.lmvipaff03.cc/register?aff=aOkm2wPW)
 
